syntax = "proto3";

option java_package = "com.ccl.grpc.api";
option java_outer_classname = "RPCDateServiceApi";
option java_multiple_files = true;

package com.ccl.grpc.api;

service RPCDateService {
  rpc getDate (RPCDateRequest) returns (RPCDateResponse) {}
}

message RPCDateRequest {
  string userName = 1;
}

message RPCDateResponse {
  string serverDate = 1;
}